<resources>
    <string name="app_name">U购购物</string>
    <string name="title_activity_mainpage">U购购物</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_goods">商品详情</string>

    <string name="home">主页</string>
    <string name="brand">品牌</string>
    <string name="theme">主题</string>
    <string name="mine">我的</string>
    <string name="cart">购物车</string>
    <string name="order">订单</string>
    <string name="tel">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="buy">购买</string>
    <string name="add_to_cart">添加到购物车</string>
    <string name="recommend">潮流前线</string>
    <string name="activity">最新动态</string>
    <string name="home_re">推荐商品</string>
    <string name="category">分类</string>
    <string name="dev">开发</string>
    <string name="settings">设置</string>
    <string name="attribute">商品属性</string>
    <string name="color">颜色</string>
    <string name="size">尺码</string>
    <string name="goods_name">商品名称</string>
    <string name="price">价格</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="attribute_select">属性选择</string>
    <string name="attribute_none">尚未选择</string>
    <string name="choose_size_color">点击选择颜色和尺寸</string>
    <string name="choose_size">请选择尺寸</string>
    <string name="choose_color">请选择颜色</string>
    <string name="address_manage">地址管理</string>
    <string name="title_activity_order_confirm">订单确认</string>
    <string name="title_activity_address">地址列表</string>
    <string name="mobile">手机号</string>
    <string name="consignee">联系人</string>
    <string name="deaddress">详细地址</string>
    <string name="goods_collect">收藏的商品</string>
    <string name="brand_collect">收藏的品牌</string>
    <string name="goods_history">浏览足迹</string>
    <string name="help">使用帮助</string>
    <string name="reply">反馈信息</string>
    <string name="add_collection_success">添加收藏成功</string>
    <string name="add_collection_failed">添加收藏失败</string>
    <string name="needs_login">需要先登录</string>
    <string name="address_management">收货地址管理</string>
    <string name="about_us">关于我们</string>
    <string name="check_update">检查更新</string>
    <string name="logout">退出登录</string>
    <string name="profile">我的资料</string>
    <string name="headimg">头像</string>
    <string name="nickname">昵称</string>
    <string name="address">地址</string>
    <string name="birthday">生日</string>
    <string name="exit_confirm">是否退出U购商城？</string>
    <string name="tip">提示</string>
    <string name="has_favourited">已经添加收藏</string>
    <string name="goods_detail">商品详情</string>
    <string name="submit">提交</string>
    <string name="insert_reply_text">请在此输入对U购的建议或者报告问题</string>
    <string name="about_wx">官方微信</string>
    <string name="about_wb">官方微博</string>
    <string name="about_website">官方网站</string>
    <string name="about_tel">请在此输入对U购的建议或者报告问题</string>
    <string name="load_category_failed">获取分类失败</string>
    <string name="load_failed">载入失败</string>
    <string name="logout_confirm">是否退出登录</string>
    <string name="incomplete">此功能尚未完成</string>
    <string name="favourite_insert_success">添加收藏成功</string>
    <string name="sms">验证码</string>
    <string name="get_sms">获取验证码</string>

    <string name="co_tel">0531-68826667</string>
    <string name="co_website">www.ugochina.com</string>
    <string name="co_description">U购,为您提供足不出户的购物体验,新品实时商家,专柜同步,正品保证.七天无理由退换货,让您躺在家里逛品牌,坐在办公室逛专卖店.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_brand_detail">BrandDetailActivity</string>
    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="help_content">U购APP模块使用帮助\n 
                一.\t首页\n 
                1.\t搜索。可搜索衣服名称、品牌等\n 
                2.\t类目。例如点开上衣，可显示全部上衣，可根据销量价格等排序\n 
                3.\t广告位。可查看广告，点开广告位后返回web格式活动页面\n 
                4.\t签到。点开后可进行签到，并可查看签到天数\n 
                5.\t上门试衣。选择附近门店-选择品牌-选择喜欢的商品-选择上门时间-生成订单-店铺收到订单通知，并与买确定订单是否还需修改商品和时间-支付（买家可线上支付，也可送货上门后选择下线支付）-完成-可评价，可申请售后。\n 
                6.\t到店预订。选择附近门店-选择品牌-选择喜欢的商品-选择到店时间--生成订单-店铺收到订单通知，并与买家确定订单是否还需修改商品和时间-支付（买家可线上支付，也可到店后选择下线支付）-完成-可评价，可申请售后。\n 
                7.\tU币。登录U币商城，可用U币兑换礼品。每消费1元获得1U币\n 
                8.\t潮流前线。展示单品，并可进行购买支付等\n 
                9.\t最新活动。点开后返回web格式活动页面，可查看活动内容\n 
                10.\t推荐商品。可推荐品牌滞销款等，下拉显示20条。\n 
                二． 品牌\n 
                点击品牌后进入品牌列表，进入某品牌后显示该品牌商品、活动内容等，商品可进行新品、价格、销量排序及筛选\n 
                三． 主题\n 
                点开后返回web格式活动页面，可查看活动内容\n 
                四． 我的\n 
                1. 可进行登录。注册\n 
                2. 可设置收货地址管理、清除缓存、关于我们、检查更新\n 
                3. 可查看收藏商品、品牌、历史足迹\n 
                4. 可查看待付款、待收货、待评论、退款/售后，并可进行操作\n 
                5. 查看所有订单。包含上门试衣、到店预订、普通订单\n 
                6. 我的U币。点进入后查看U币数量并同时进入U币商城\n 
                7. 我的卡券，将领取的所有卡券，例如优惠券、包邮券等呈现\n 
                8. 使用帮助。图片版显示特色功能\n 
                9. 反馈信息。提交反馈建议\n 
                四． 购买\n 
                1. 所有商品只限山东地区购买,其他地区下单不发货,误操作可联系我们退款</string>
    <string name="title_activity_order_list">OrderListActivity</string>

</resources>
