<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img"
        android:layout_width="@dimen/splash_logo_size"
        android:layout_height="@dimen/logo_img_size"
        android:layout_marginLeft="@dimen/margin_stanard"
        android:layout_marginTop="@dimen/margin_stanard"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/goods_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img"
        android:layout_marginLeft="@dimen/margin_stanard"
        android:layout_toRightOf="@id/img"
        android:text="@string/goods_name" />

    <TextView
        android:id="@+id/lb_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/goods_name"
        android:layout_below="@id/goods_name"
        android:text="@string/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_stanard"
        android:layout_toRightOf="@+id/lb_price"
        android:layout_below="@id/goods_name"
        android:text="0" />

    <TextView
        android:id="@+id/lb_attribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/goods_name"
        android:layout_below="@id/lb_price"
        android:text="@string/attribute" />

    <TextView
        android:id="@+id/attribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lb_attribute"
        android:layout_below="@id/lb_price"
        android:layout_marginLeft="@dimen/margin_stanard"
        android:text="@string/attribute_none" />

    <TextView
        android:id="@+id/attribute_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img"
        android:layout_alignLeft="@id/img"
        android:layout_marginTop="@dimen/margin_stanard"
        android:text="@string/attribute_select" />

    <TextView
        android:id="@+id/color_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/attribute_lb"
        android:layout_below="@+id/attribute_lb"
        android:text="@string/color" />

    <com.viator42.ugo.widget.FloatingView
        android:id="@+id/colors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/color_lb"
        android:layout_marginTop="@dimen/margin_stanard"
        android:layout_marginHorizontal="@dimen/margin_stanard" />

    <TextView
        android:id="@+id/size_lb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/colors"
        android:layout_alignLeft="@+id/colors"
        android:text="@string/size" />

    <com.viator42.ugo.widget.FloatingView
        android:id="@+id/sizes"
        android:layout_below="@id/size_lb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_stanard"
        android:layout_marginHorizontal="@dimen/margin_stanard" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sizes"
        android:textColor="@color/text_white"
        android:background="@color/button_bg"
        android:layout_margin="@dimen/margin_stanard"
        android:text="@string/confirm" />
</RelativeLayout>