<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".module.address.InsertAddressActivity"
    tools:showIn="@layout/activity_insert_address">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="@dimen/margin_stanard"
        android:layout_marginTop="@dimen/margin_stanard"
        android:orientation="vertical">

        <EditText
            android:layout_marginTop="@dimen/margin_stanard"
            android:layout_marginHorizontal="@dimen/margin_stanard"
            style="@style/EditTextStyle"
            android:id="@+id/consignee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/consignee" />

        <EditText
            android:layout_marginTop="@dimen/margin_stanard"
            android:layout_marginHorizontal="@dimen/margin_stanard"
            style="@style/EditTextStyle"
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile" />

        <EditText
            android:layout_marginTop="@dimen/margin_stanard"
            android:layout_marginHorizontal="@dimen/margin_stanard"
            style="@style/EditTextStyle"
            android:id="@+id/deaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deaddress" />

        <LinearLayout
            android:layout_marginTop="@dimen/margin_stanard"
            android:layout_marginHorizontal="@dimen/margin_stanard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/BtnStyle"
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/confirm" />

            <Button
                android:layout_marginLeft="@dimen/margin_stanard"
                style="@style/BtnStyle"
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>